tenants/tenant-test1/123/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: '123'
    tenant: tenant-test1
  name: '123'
  namespace: tenant-test1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: '123'
      tenant: tenant-test1
  template:
    metadata:
      labels:
        app: '123'
        tenant: tenant-test1
    spec:
      containers:
      - image: nginx:1.27-alpine
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        name: '123'
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
