tenants/tenant-test1/123/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: '123'
    tenant: tenant-test1
  name: 123-service
  namespace: tenant-test1
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: '123'
    tenant: tenant-test1
  type: ClusterIP
