tenants/tenant-test1/123/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 123-ingress
  namespace: tenant-test1
spec:
  ingressClassName: nginx
  rules:
  - host: 123.tenant-test1.local.dev
    http:
      paths:
      - backend:
          service:
            name: 123-service
            port:
              number: 80
        path: /
        pathType: Prefix
